--- a/plugin.xml
+++ b/plugin.xml
@@ -365,12 +365,12 @@ The native map view is faster, use less network usage, display 3D views, and eve
 
          <config-file target="*-Info.plist" parent="CFBundleDevelopmentRegion"> +       
 -          <array>  
--            <string>English</string>  
+-            <string>Porturguese</string>  
 -          </array> 
 -        </config-file> 
 -        <config-file target="*-Info.plist" parent="CFBundleLocalizations"> 
 -            <array>    
--                <string>en</string>    
+-                <string>pt-BR</string>    
 -            </array>   
 -        </config-file>
 
